update 포트폴리오 설명 추가

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <li>
                       <b>구현한 페이지 : 메인, 통계</b>
                       <ul>
-                        <li>- 메인페이지 : user의 자산 목록과 각 은행별 자산을 지축/ 수입의 변동사항에 따라 유동적으로 변경되도록 하였다.</li>
+                        <li>- 메인페이지 : user의 자산 목록과 각 은행별 자산을 지축/ 수입의 변동사항에 따라 유동적으로 변경되도록 하였습니다.</li>
                         <li>- 통계페이지 : 데일리 페이지에서 등록한 지출 데이터를 각 카테고리별로 구분 하여 백분율로 통계를 나타내었으며, 월별 총 지출 또한 한눈에 보기쉽게 통계로 구현했습니다.(통계페이지는 chart.js 플러그인을 사용하였습니다)</li>
                       </ul>
                     </li>
@@ -150,6 +150,7 @@
           <div class="s-tab">
             <button class="show" type="button">vanilla</button>
             <button type="button">vue</button>
+            <button type="button">React</button>
           </div>
           <div class="s-contents">
             <!-- vanilla -->
@@ -181,7 +182,7 @@
                         <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/vanilla/todoList/src/js" target="_blank"># js</a>
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/todoList/src/styles.css" target="_blank"># css</a>
                       </div>
-                      <a class="sec-btn" href="./vanilla/google-page/index.html" target="_blank">click me</a>
+                      <a class="sec-btn" href="./vanilla/todoList/index.html" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
@@ -205,7 +206,6 @@
                           <p>javascript, html, css</p>
                         </li>
                       </ul>
-                      <!-- <p class="sec-explain">JS(코드는 바닐라자바스크립트로 작성하였다)와 엘리먼트를 통해 간단한 그림판을 구현 하였습니다. casnvas API를 이용하였으며 ,펜의 굵기,색상에 따라 그림을 그릴수 있고, fill버튼으로 캔버스의 색상을 바꿀수 있으며, save버튼을 통해 내가 그린 그림을 .jpg 형식으로 저장할수 있습니다.</p> -->
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/index.html"
                           target="_blank"># html</a>
@@ -224,7 +224,17 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">순수 Javascript 로 구현한 계산기 입니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p>순수 Javascript 로 구현한 계산기 입니다.</p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>
+                      </ul>
+                     
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/caculator/index.html" target="_blank"># html</a>
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/caculator/src/index.js" target="_blank"># js</a>
@@ -239,7 +249,16 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">숫자의 범위를 선택해서 0 부터 사용자가 지정해 놓은 곳까지 랜덤으로 정해진 숫자를 맞출수 있습니다. 해당 게임은 순수 자바스크립트로 구현하였습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p >숫자의 범위를 선택해서 0 부터 사용자가 지정해 놓은 곳까지 랜덤으로 정해진 숫자를 맞출수 있습니다. 해당 게임은 순수 자바스크립트로 구현하였습니다.</p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>
+                      </ul>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/random%20Number/index.html" target="_blank"># html</a>
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/random%20Number/src/index.js" target="_blank"># js</a>
@@ -254,7 +273,17 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p>웹 접근성을 준수하여 마크업한 페이지입니다. pc, table, mobile 에 맞게 반응형으로 제작하였으며, vanill JS를 이용해 동적인 기능들을 구현했습니다.</p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>
+                      </ul>
+                      <p class="sec-explain"></p>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/index.html" target="_blank"># html</a>
                         <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/js" target="_blank"># js</a>
@@ -269,7 +298,16 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">웹접근성을 준수하여 마크업한 페이지입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile에 맞게 반응형으로 제작하였으며,  vanilla JS 를 이용해 동적인 기능들을 구현했습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p>웹 접근성을 준수하여 마크업한 페이지입니다. pc, table, mobile 에 맞게 반응형으로 제작하였으며, vanill JS를 이용해 동적인 기능들을 구현했습니다.</p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>
+                      </ul>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/K-Life%20insurance/index.html"
                           target="_blank"># html</a>
@@ -283,13 +321,22 @@
                     </div>
                   </div>
                 </li>
-               
                 <li>
                   <strong>마이크로소프트</strong>
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">웹접근성을 준수하여 마크업한 사이트입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile의 다양한 접속환경에서 불편함 없이 동일한 정보를 볼 수 있는 반응형으로 제작했습니다. 바닐라 JavaScript를 이용해 동적인 기능들을 구현했습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p>웹접근성을 준수하여 마크업한 사이트입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile의 다양한 접속환경에서 불편함 없이 동일한 정보를 볼 수 있는 반응형으로 제작했습니다. 바닐라 JavaScript를
+                          이용해 동적인 기능들을 구현했습니다.</p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>
+                      </ul>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/Microsoft/index.html"
                           target="_blank">#
@@ -309,8 +356,16 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">웹접근성을 준수하여 마크업한 페이지입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile에 맞게 반응형으로 제작하였으며, vanilla JS 를 이용해
-                        동적인 기능들을 구현했습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p>웹접근성을 준수하여 마크업한 사이트입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile의 다양한 접속환경에서 불편함 없이 동일한 정보를 볼 수 있는 반응형으로 제작했습니다. 바닐라 JavaScript를 이용해 동적인 기능들을 구현했습니다.</p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>
+                      </ul>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/index.html" target="_blank">#
                           html</a>
@@ -328,7 +383,18 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">웹접근성을 준수하여 마크업한 페이지입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile에 맞게 반응형으로 제작하였으며,  vanilla JS 를 이용해 동적인 기능들을 구현했습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p>웹접근성을 준수하여 마크업한 사이트입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile의 다양한 접속환경에서 불편함 없이 동일한 정보를 볼 수 있는 반응형으로 제작했습니다. 바닐라
+                            JavaScript를
+                            이용해 동적인 기능들을 구현했습니다.</p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>
+                      </ul>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/index.html"
                           target="_blank">#
@@ -361,7 +427,17 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">현재 위치의 날씨를 알수 있으며 원하는 나라또는 지역을 검색할수 있습니다. 날씨는 최대 일주일 후까지의 나타냈으며 현재 온도, 최대온도, 체감온도 정보를 알수 있습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p >현재 위치의 날씨를 알수 있으며 원하는 나라또는 지역을 검색할수 있습니다. 날씨는 최대 일주일 후까지의 나타냈으며 현재 온도, 최대온도, 체감온도 정보를 알수 있습니다.
+                          </p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>vue.js , html, css, javascript</p>
+                        </li>
+                      </ul>
                       <a class="code" href="https://github.com/gay0ung/Vue/tree/master/weather/src" target="_blank"># vue</a>
                       <a class="sec-btn" href="https://eloquent-lumiere-dd3402.netlify.app/#/" target="_blank">click me</a>
                     </div>
@@ -372,7 +448,16 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain"></p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p></p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>vue.js , html, css, javascript</p>
+                        </li>
+                      </ul>
                       <a class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
@@ -383,7 +468,16 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">Hacker news API를 연동하여 VUE.JS로 제작하였습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p>Hacker news API를 연동하여 VUE.JS로 제작하였습니다. </p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>vue.js , html, css, javascript</p>
+                        </li>
+                      </ul>
                       <a class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="https://xenodochial-neumann-091b51.netlify.app" target="_blank">click me</a>
                     </div>
@@ -394,13 +488,57 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">vue로 제작한 todo-list입니다. 기본적으로 삭제(&전체작제), 추가 기능이 구현되었으며 추가 했던 리스트들을 localstorage에 저장하여 , 재접속시 유저가 추가 했던 내용을 다시 불러올수 있게 하였습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p>vue로 제작한 todo-list입니다. 기본적으로 삭제(&전체작제), 추가 기능이 구현되었으며 추가 했던 리스트들을 localstorage에 저장하여 , 재접속시 유저가 추가 했던 내용을 다시 불러올수 있게
+                          하였습니다.</p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>vue.js , html, css, javascript</p>
+                        </li>
+                      </ul>
                       <a class="code" href="https://github.com/gay0ung/Vue/tree/master/todo-list/src" target="_blank"># vue</a>
                       <a class="sec-btn" href="https://confident-murdock-6bedfd.netlify.app" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
               </ul>
+              <div class="close-btn">
+                <span class="line"></span>
+                <span class="line"></span>
+              </div>
+            </div>
+
+            <!-- react -->
+            <!-- vue -->
+            <div class="react">
+              <h3>react</h3>
+              <ul class="sec list">
+                <li>
+                  <strong></strong>
+                  <div class="sec-container">
+                    <div class="sec-img"></div>
+                    <div class="content">
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <p></p>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>react , html, css, javascript</p>
+                        </li>
+                      </ul>
+                      <a class="code" href="https://github.com/gay0ung/Vue/tree/master/weather/src" target="_blank"># vue</a>
+                      <a class="sec-btn" href="https://eloquent-lumiere-dd3402.netlify.app/#/" target="_blank">click me</a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+
+              <!-- close -->
               <div class="close-btn">
                 <span class="line"></span>
                 <span class="line"></span>
