udpate react contact-app link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-  <!-- <a href='https://pngtree.com/so/줄자'>줄자 png from pngtree.com</a> -->
+
   <title>y0u&g.e</title>
 </head>
 
@@ -312,7 +312,7 @@
                         </li>
                       </ul>
                       <a class="code" href="https://github.com/gay0ung/React/tree/main/contact-app/src" target="_blank">#react</a>
-                      <a class="sec-btn" href="#" target="_blank">click
+                      <a class="sec-btn" href="https://optimistic-aryabhata-b40d3c.netlify.app/" target="_blank">click
                         me</a>
                     </div>
                   </div>
