--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <li>
                   <strong>movie</strong>
                   <div class="sec-container">
-                    <div class="sec-img"></div>
+                    <div class="sec-img">진행중...</div>
                     <div class="content">
                       <ul class="sec-explain">
                         <li>
