--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </li>
                     <li>
                       <b>사용기술</b>
-                      <p>vue.js, axios, firebase, git, html, css, chart.js</p>
+                      <p>react, html, css, git, github </p>
                     </li>
                   </ul>
             
