--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="page-wrap">
     <header>
-      <h1 class="pw-logo">lee ga gyoung.</h1>
+      <h1 class="pw-logo">lee ga young.</h1>
       <nav>
         <div id="hNavBtn">
           <span class="line"></span>
