--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
       <div class="main-inner">
-        <section class="contact on">
+        <section class="contact_wrap on">
           <h3>contact</h3>
           <div class="sec">
             <div class="contact-img"></div>
@@ -48,6 +48,7 @@
               <a href="https://github.com/gay0ung" target="_blank"><i class="fab fa-github"></i>github</a>
               <a href="mailto:6and_end9@naver.com"><i class="far fa-envelope"></i>email address</a>
               <a href="tel:01092438180"><i class="fas fa-phone-alt"></i>phone number</a>
+              <a href="https://velog.io/@gay0ung" target="_blank"><i class="fas fa-desktop"></i>blog</a>
             </address>
           </div>
         </section>
@@ -58,7 +59,7 @@
             <li>
               <strong><i class="t-logo"></i>JavaScript</strong>
               <div class="t-content">
-                <b>ES6</b>
+                <b>ES6+</b>
                 <span>
                   ES6, ES2020 문법을 이해하고, 이를 기반으로 코드를 구현 할줄 압니다.
                 </span>
@@ -83,6 +84,15 @@
               </div>
             </li>
             <li>
+              <strong><i class="t-logo"></i>SCSS</strong>
+              <div class="t-content">
+                <b>SCSS</b>
+                <span>
+                  mixin, variable을 사용해 스타일을 캡슐화 해 중복되는 코드를 재활용 할수 있도록 코드를 구현 할수 있습니다.
+                </span>
+              </div>
+            </li>
+            <li>
               <strong><i class="t-logo"></i>Vue.js</strong>
               <div class="t-content">
                 <b>Vue.js</b>
@@ -91,26 +101,56 @@
 
             </li>
             <li>
+              <strong><i class="t-logo"></i>React</strong>
+              <div class="t-content">
+                <b>React</b>
+                <span>컴포넌트를 세분화해 복잡한 UI를 구현할수 있습니다. 또한 hook을 사용하여 데이터를 최적화 하는데 중점을 둔 코드를 구현합니다.</span>
+                <b>Styled-component</b>
+                <span>스타일드 컴포넌트를 사용한 코드를 구현 할수 있습니다.</span>
+              </div>
+            </li>
+            <li>
               <strong><i class="t-logo"></i>git</strong>
               <div class="t-content">
                 <b>Git/Github</b>
                 <span>git을 이용해 버전관리와 협업을 할수 있습니다.</span>
               </div>
-
-            </li>
-            <li>
-              <strong><i class="t-logo"></i>React</strong>
-              <div class="t-content">
-                <b>React</b>
-                <span>컴포넌트를 세분화해 복잡한 UI를 구현할수 있습니다. 또한 hook을 사용하여 데이터를 최적화 하는데 중점을 둔 코드를 구현합니다.</span>
-              </div>
-
             </li>
           </ul>
         </section>
         <section class="m-project">
           <h3>project</h3>
           <ul class="sec list">
+            <li>
+              <strong>졸작</strong>
+              <div class="sec-container">
+                <div class="sec-img"></div>
+                <div class="content">
+                  <ul class="sec-explain">
+                    <li>
+                      <b>구현한 페이지 : 메인페이지, 마이페이지, 작가목록, 졸업작품, 모달창, 버튼 컴포넌트, 에러페이지</b>
+                      <ul>
+                        <li>- 누적 사용자 100명 (21.05.18 기준)</li>
+                        <li>- 졸작의 서비스는 쉽고 빠르게 졸업 작품에 필요한 팀 매칭을 도와주고,졸업 작품을 온라인에 전시하고 누구든지 쉽게 살펴 볼수 있는 플랫폼입니다.</li>
+                        <li>- 팀원 : 백엔드(1), 풀스텍 (1), 프론트엔드(본인1), 디자이너(1)</li>
+                      </ul>
+                    </li>
+                    <li>
+                      <b>사용기술</b>
+                      <p>react,react-hooks, html, scss, git, github</p>
+                    </li>
+                  </ul>
+
+                  <div class="code-box">
+                    <a href="https://github.com/globalmedia-joljak/web-frontend/tree/develop/src"
+                      target="_blank">#react</a>
+                  </div>
+
+                  <a class="sec-btn" href="https://www.joljak.kr " target="_blank">click
+                    me</a>
+                </div>
+              </div>
+            </li>
             <li>
               <strong>머니부</strong>
               <div class="sec-container">
@@ -120,9 +160,9 @@
                     <li>
                       <b>구현한 페이지 : 메인, 통계</b>
                       <ul>
-                        <li>- 메인페이지 : user의 자산 목록과 각 은행별 자산을 지축/ 수입의 변동사항에 따라 유동적으로 변경되도록 하였습니다.</li>
-                        <li>- 통계페이지 : 데일리 페이지에서 등록한 지출 데이터를 각 카테고리별로 구분 하여 백분율로 통계를 나타내었으며, 월별 총 지출 또한 한눈에 보기쉽게 통계로
-                          구현했습니다.(통계페이지는 chart.js 플러그인을 사용하였습니다)</li>
+                        <li>- 사용자의 소비 패턴을 분석하고 사용자가 파악할수 있도록 통계를 산출 및 시각화 하여 안정적인 소비 패턴을 유도하여 간편하게 재정 관리를 할수 있는 플랫폼 입니다.
+                        </li>
+                        <li>- 팀원 : 프론트엔드(4) (본인포함)</li>
                       </ul>
                     </li>
                     <li>
@@ -133,40 +173,14 @@
 
                   <div class="code-box">
                     <a href="https://github.com/gay0ung/moneyboo/tree/develop/src/components/statistics"
-                      target="_blank"># Statistics.vue</a>
+                      target="_blank">#
+                      Statistics.vue</a>
                     <a href="https://github.com/gay0ung/moneyboo/blob/develop/src/components/AssetListForm.vue"
-                      target="_blank"># Main.vue</a>
+                      target="_blank">#
+                      Main.vue</a>
                   </div>
 
                   <a class="sec-btn" href="https://goofy-joliot-865e26.netlify.app/registration" target="_blank">click
-                    me</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <strong>졸작</strong>
-              <div class="sec-container">
-                <div class="sec-img">현재 진행중....</div>
-                <div class="content">
-                  <ul class="sec-explain">
-                    <li>
-                      <b>구현한 페이지 : </b>
-                      <ul>
-                        <li></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <b>사용기술</b>
-                      <p>react, html, css, git, github </p>
-                    </li>
-                  </ul>
-            
-                  <div class="code-box">
-                    <a href="#" target="_blank">#</a>
-                    <a href="#" target="_blank">#</a>
-                  </div>
-            
-                  <a class="sec-btn" href="#" target="_blank">click
                     me</a>
                 </div>
               </div>
@@ -311,7 +325,8 @@
                           <p>react , html, css, javascript</p>
                         </li>
                       </ul>
-                      <a class="code" href="https://github.com/gay0ung/React/tree/main/contact-app/src" target="_blank">#react</a>
+                      <a class="code" href="https://github.com/gay0ung/React/tree/main/contact-app/src"
+                        target="_blank">#react</a>
                       <a class="sec-btn" href="https://optimistic-aryabhata-b40d3c.netlify.app/" target="_blank">click
                         me</a>
                     </div>
